--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,11 @@
 # Configurações Gerais do Projeto
 # Copie este arquivo para .env e configure as variáveis conforme necessário
 
-# Ambiente de desenvolvimento
+# ========================================
+# DESENVOLVIMENTO
+# ========================================
+
+# Ambiente
 NODE_ENV=development
 
 # URLs dos serviços
@@ -10,13 +14,43 @@ FRONTEND_URL=http://localhost:5173
 
 # Configurações do Backend (também configure em backend/.env)
 DATABASE_URL=postgres://username:password@localhost:5432/sistema_doacoes
-JWT_SECRET=your-super-secret-jwt-key-here
+JWT_SECRET=your-super-secret-jwt-key-here-change-in-production
 JWT_EXPIRES_IN=8h
 
-# Configurações do Frontend (quando implementado)
+# Configurações do Frontend
 REACT_APP_API_URL=http://localhost:3000
 REACT_APP_APP_NAME=Sistema de Doações
 
-# Configurações de Deploy
-PRODUCTION_BACKEND_URL=https://your-backend-url.render.com
-PRODUCTION_FRONTEND_URL=https://your-frontend-url.vercel.app
+# ========================================
+# PRODUÇÃO (Deploy)
+# ========================================
+
+# Ambiente
+# NODE_ENV=production
+
+# Porta (geralmente definida automaticamente pela plataforma)
+# PORT=3000
+
+# Banco de Dados PostgreSQL
+# DATABASE_URL=postgresql://user:password@host:port/database
+
+# JWT Secret (IMPORTANTE: Use uma chave forte e única em produção!)
+# JWT_SECRET=generate-a-strong-random-secret-key-here
+# JWT_EXPIRES_IN=24h
+
+# CORS (deixe vazio para permitir todas as origens ou especifique)
+# CORS_ORIGIN=https://seu-dominio.com
+
+# ========================================
+# NOTAS IMPORTANTES
+# ========================================
+# 
+# 1. Para deploy, configure estas variáveis na sua plataforma:
+#    - Render.com: Environment → Environment Variables
+#    - Heroku: Settings → Config Vars
+#    - AWS EB: Configuration → Software → Environment properties
+#
+# 2. Nunca commite o arquivo .env com valores reais!
+#
+# 3. Para gerar um JWT_SECRET seguro, use:
+#    node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
