--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,7 @@
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "build": "echo 'No build step required for Node.js'",
-    "deploy": "npm run migrate && npm start",
-    "postinstall": "npm run migrate",
+    "deploy": "npm start",
     "test": "jest",
     "test:unit": "jest src/tests/unit",
     "test:integration": "jest src/tests/integration",
