--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Sistema completo de doações com backend em Node.js e frontend em React",
   "private": true,
   "scripts": {
+    "preinstall": "npm config set unsafe-perm true",
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "dev:backend": "cd backend && npm run dev",
     "dev:frontend": "cd frontend && npm run dev",
