--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,6 @@
     "@types/react": "^18.3.26",
     "@types/react-dom": "^18.3.7",
     "@types/react-router-dom": "^5.3.3",
-    "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
@@ -34,7 +33,6 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
-    "typescript-eslint": "^8.3.0",
-    "vite": "^5.0.0"
+    "typescript-eslint": "^8.3.0"
   }
 }
